Update and rename 20.04.2022.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Jump Game</title>
-    <link rel="stylesheet" href="./20.04.2022.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="game">
@@ -12,5 +12,5 @@
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
   </body>
-  <script src="./20.04.2022.js"></script>
+  <script src="./script.js"></script>
 </html>
